Ajustando Direcciones y Roles