@@ -3,6 +3,8 @@ package Integrador.Pasteleria.resource;
 
 import Integrador.Pasteleria.dto.LoginRequest;
 import Integrador.Pasteleria.dto.RegisterRequest;
+import Integrador.Pasteleria.dto.ForgotPasswordRequest;
+import Integrador.Pasteleria.dto.ResetPasswordRequest;
 import Integrador.Pasteleria.entity.Usuario;
 import Integrador.Pasteleria.service.PasswordResetService;
 import Integrador.Pasteleria.service.UsuarioService;
@@ -27,12 +29,18 @@ import java.util.Base64;
 import java.util.Optional;
 import java.util.HashSet;
 import java.util.Arrays;
+import static java.util.Map.of;
+import static java.util.Map.ofEntries;
+import java.util.Map;
+import java.util.Set;
 
 import javax.crypto.spec.SecretKeySpec;
 import javax.crypto.SecretKey;
 import java.security.Key;
 
 @Path("/auth")
+@Produces(MediaType.APPLICATION_JSON)
+@Consumes(MediaType.APPLICATION_JSON)
 public class AuthResource {
 
     @Inject
@@ -63,178 +71,117 @@ public class AuthResource {
         byte[] secretBytes = Base64.getUrlDecoder().decode(SECRET_STRING);
         SECRET_KEY = new SecretKeySpec(secretBytes, "HmacSHA256");
     }
-
-    // ============================================================================
-    // DTOs INTERNOS TEMPORALES
-    // ============================================================================
-
-    public static class ForgotPasswordRequest {
-        private String email;
-
-        public ForgotPasswordRequest() {
-        }
-
-        public String getEmail() {
-            return email;
-        }
-
-        public void setEmail(String email) {
-            this.email = email;
-        }
-    }
-
-    public static class ResetPasswordRequest {
-        private String token;
-        private String newPassword;
-        private String confirmPassword;
-
-        public ResetPasswordRequest() {
-        }
-
-        public String getToken() {
-            return token;
-        }
-
-        public void setToken(String token) {
-            this.token = token;
-        }
-
-        public String getNewPassword() {
-            return newPassword;
-        }
-
-        public void setNewPassword(String newPassword) {
-            this.newPassword = newPassword;
-        }
-
-        public String getConfirmPassword() {
-            return confirmPassword;
-        }
-
-        public void setConfirmPassword(String confirmPassword) {
-            this.confirmPassword = confirmPassword;
-        }
-    }
-
     // ============================================================================
     // ENDPOINTS
     // ============================================================================
 
+    /* ---------- 2. REGISTER ---------- */
     @POST
     @Path("/register")
-    @Consumes(MediaType.APPLICATION_JSON)
-    @Produces(MediaType.APPLICATION_JSON)
-    public Response register(RegisterRequest request) {
-        String password = request.getPassword() != null ? request.getPassword().trim() : "";
-        String confirmPassword = request.getConfirmPassword() != null ? request.getConfirmPassword().trim() : "";
-
-        if (!password.equals(confirmPassword)) {
-            return Response.status(Response.Status.BAD_REQUEST).entity("Las contraseñas no coinciden").build();
+    public Response register(RegisterRequest req) {
+        if (!req.getPassword().equals(req.getConfirmPassword())) {
+            return Response.status(400)
+                    .entity(of("ok", false, "msg", "Las contraseñas no coinciden"))
+                    .build();
         }
-        if (usuarioService.findByUserEmail(request.getEmail()).isPresent()) {
-            return Response.status(Response.Status.CONFLICT).entity("Usuario ya existe").build();
+        if (usuarioService.findByUserEmail(req.getEmail()).isPresent()) {
+            return Response.status(409)
+                    .entity(of("ok", false, "msg", "El usuario ya existe"))
+                    .build();
         }
         try {
-            Usuario newUser = new Usuario();
-            newUser.setUsername(request.getFirstName() + " " + request.getLastName());
-            newUser.setUserEmail(request.getEmail());
-            newUser.setPhoneNumber(request.getPhone());
-            newUser.setUserPassword(request.getPassword());
-            newUser.setUserRole(Usuario.Role.cliente);
+            Usuario nuevo = new Usuario();
+            nuevo.setUsername(req.getFirstName() + " " + req.getLastName());
+            nuevo.setUserEmail(req.getEmail());
+            nuevo.setPhoneNumber(req.getPhone());
+            nuevo.setUserPassword(req.getPassword()); // se hashea en el service
+            nuevo.setUserRole(Usuario.Role.cliente);
+            usuarioService.saveUser(nuevo);
 
-            usuarioService.saveUser(newUser);
-
-            String token = Jwt.upn(newUser.getUserEmail())
-                    .groups(new HashSet<>(Arrays.asList(newUser.getUserRole().name())))
+            String token = Jwt.upn(nuevo.getUserEmail())
+                    .groups(Set.of(nuevo.getUserRole().name()))
                     .expiresIn(3600)
                     .sign(SECRET_KEY);
+            return Response.ok(of(
+                    "ok", true,
+                    "token", token,
+                    "role", nuevo.getUserRole().name())).build();
 
-            return Response.ok(token).build();
-
-        } catch (PersistenceException e) {
-            e.printStackTrace();
-            return Response.status(Response.Status.CONFLICT)
-                    .entity("Error de base de datos: Verifica que todos los campos sean válidos.").build();
         } catch (Exception e) {
-            e.printStackTrace();
-            return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
-                    .entity("Fallo interno del servidor: " + e.getMessage()).build();
+            return Response.status(500)
+                    .entity(of("ok", false, "msg", "Error interno: " + e.getMessage()))
+                    .build();
         }
     }
 
+    /* ---------- 1. LOGIN ---------- */
     @POST
     @Path("/login")
-    @Consumes(MediaType.APPLICATION_JSON)
-    @Produces(MediaType.APPLICATION_JSON)
-    public Response login(LoginRequest request) {
-        try {
-            Optional<Usuario> optionalUser = usuarioService.findByUserEmail(request.getEmail());
-            if (optionalUser.isEmpty()) {
-                return Response.status(Response.Status.UNAUTHORIZED)
-                        .entity("Correo o contraseña incorrectos.")
-                        .build();
-            }
-            Usuario usuario = optionalUser.get();
-            if (!usuarioService.checkPassword(request.getPassword(), usuario.getUserPassword())) {
-                return Response.status(Response.Status.UNAUTHORIZED)
-                        .entity("Correo o contraseña incorrectos.")
-                        .build();
-            }
-
-            String token = Jwt.upn(usuario.getUserEmail())
-                    .groups(new HashSet<>(Arrays.asList(usuario.getUserRole().name())))
-                    .expiresIn(3600)
-                    .sign(SECRET_KEY);
-            return Response.ok(token).build();
-
-        } catch (Exception e) {
-            e.printStackTrace();
-            return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
-                    .entity("Ocurrió un error en el servidor. Inténtalo de nuevo más tarde.")
-                    .build();
+    public Response login(LoginRequest req) {
+        Optional<Usuario> opt = usuarioService.findByUserEmail(req.getEmail());
+        if (opt.isEmpty() ||
+            !usuarioService.checkPassword(req.getPassword(), opt.get().getUserPassword())) {
+            return Response.status(401)
+                           .entity(of("ok", false, "msg", "Correo o contraseña incorrectos"))
+                           .build();
         }
+        Usuario u = opt.get();
+        String token = Jwt.upn(u.getUserEmail())
+                          .groups(Set.of(u.getUserRole().name()))
+                          .expiresIn(3600)
+                          .sign(SECRET_KEY);
+        return Response.ok(of(
+                "ok", true,
+                "token", token,
+                "role", u.getUserRole().name()
+        )).build();
     }
 
+    /* ---------- 3. FORGOT-PASSWORD ---------- */
     @POST
     @Path("/forgot-password")
-    @Consumes(MediaType.APPLICATION_JSON)
-    @Produces(MediaType.TEXT_PLAIN)
-    public Response forgotPassword(ForgotPasswordRequest request) {
-        Optional<Usuario> optionalUser = usuarioService.findByUserEmail(request.getEmail());
-        if (optionalUser.isEmpty()) {
-            return Response
-                    .ok("Si la dirección de correo está registrada, recibirás un enlace para restablecer tu contraseña")
-                    .build();
+    public Response forgotPassword(ForgotPasswordRequest req) {
+        Optional<Usuario> opt = usuarioService.findByUserEmail(req.getEmail());
+        if (opt.isPresent()) {
+            String token = passwordResetService.generateResetToken(req.getEmail());
+            return Response.ok(of(
+                    "ok", true,
+                    "msg", "Se ha enviado un enlace a tu correo",
+                    "token", token 
+            )).build();
         }
-        String resetToken = passwordResetService.generateResetToken(request.getEmail());
-        return Response.ok("Token de restablecimiento generado: " + resetToken).build();
+        return Response.ok(of(
+                "ok", true,
+                "msg", "Si la dirección existe, recibirás un enlace para restablecer tu contraseña")).build();
     }
 
     @POST
     @Path("/reset-password")
-    @Consumes(MediaType.APPLICATION_JSON)
-    @Produces(MediaType.TEXT_PLAIN)
     public Response resetPassword(ResetPasswordRequest request) {
         if (!request.getNewPassword().equals(request.getConfirmPassword())) {
-            return Response.status(Response.Status.BAD_REQUEST).entity("Las contraseñas no coinciden.").build();
+            return Response.status(Response.Status.BAD_REQUEST)
+                    .entity(Map.of("ok", false, "msg", "Las contraseñas no coinciden."))
+                    .build();
         }
 
-        Optional<String> optionalEmail = passwordResetService.validateResetToken(request.getToken());
-        if (optionalEmail.isEmpty()) {
-            return Response.status(Response.Status.BAD_REQUEST).entity("El token es inválido o ha expirado.").build();
+        Optional<String> optEmail = passwordResetService.validateResetToken(request.getToken());
+        if (optEmail.isEmpty()) {
+            return Response.status(Response.Status.BAD_REQUEST)
+                    .entity(Map.of("ok", false, "msg", "El token es inválido o ha expirado."))
+                    .build();
         }
 
-        String userEmail = optionalEmail.get();
-        Optional<Usuario> optionalUser = usuarioService.findByUserEmail(userEmail);
-        if (optionalUser.isEmpty()) {
-            return Response.status(Response.Status.NOT_FOUND).entity("Usuario no encontrado").build();
+        Usuario usuario = usuarioService.findByUserEmail(optEmail.get()).orElse(null);
+        if (usuario == null) {
+            return Response.status(Response.Status.NOT_FOUND)
+                    .entity(Map.of("ok", false, "msg", "Usuario no encontrado"))
+                    .build();
         }
 
-        Usuario usuario = optionalUser.get();
         usuarioService.updatePassword(usuario, request.getNewPassword());
-
         passwordResetService.invalidateToken(request.getToken());
 
-        return Response.ok("Contraseña restablecida exitosamente.").build();
+        return Response.ok(Map.of("ok", true, "msg", "Contraseña restablecida exitosamente."))
+                .build();
     }
 }
